--- a/css/about-style.css
+++ b/css/about-style.css
@@ -150,6 +150,36 @@ body {
 
 }
 
+.rounded-circle {
+  border-radius: 100%!important;
+  border-top-left-radius: 100%!important;
+  border-top-right-radius: 100% !important;
+  border-bottom-right-radius: 100% !important;
+  border-bottom-left-radius: 100%!important;
+
+
+}
+
+.img-fluid {
+
+    height: 200px;
+    padding: 100px;
+    border-style: solid;
+    border-color: lightgray;
+    border-width: thick;
+    width: 50%;
+
+}
+
+
+
+
+main {
+  flex:1;
+  flex-wrap: wrap;
+
+}
+
 footer {
   color:#212529;
   display:flex;
