--- a/css/about-style.css
+++ b/css/about-style.css
@@ -116,7 +116,7 @@ body {
   background-color:white;
   font-family: 'Roboto',
   color:#gray;
-  font-size: 30px;
+  font-size: 20px;
   font-style: italic;
 
 }
@@ -151,24 +151,24 @@ body {
 }
 
 .rounded-circle {
-  border-radius: 100%!important;
-  border-top-left-radius: 100%!important;
-  border-top-right-radius: 100% !important;
-  border-bottom-right-radius: 100% !important;
-  border-bottom-left-radius: 100%!important;
-
+  border-radius: 50%!important;
+  border-top-left-radius: 50%!important;
+  border-top-right-radius: 50% !important;
+  border-bottom-right-radius: 50% !important;
+  border-bottom-left-radius: 50%!important;
+  height: 20px;
+  width: 20%;
+  padding: 100px;
 
 }
 
 .img-fluid {
 
     height: 200px;
-    padding: 100px;
-    border-style: solid;
-    border-color: lightgray;
-    border-width: thick;
-    width: 50%;
-
+    padding: 40px;
+    width: 20%;
+    object-fit: cover;
+    display: inline-flex;
 }
 
 
@@ -177,6 +177,11 @@ body {
 main {
   flex:1;
   flex-wrap: wrap;
+  margin: 0 auto;
+  display:  flex;
+  text-align: center;
+  justify-content: center;
+  max-width: 960px;
 
 }
 
